--- a/css/styles.css
+++ b/css/styles.css
@@ -11337,8 +11337,8 @@ body {
 #mainNav .navbar-toggler {
   font-size: 80%;
   padding: 0.75rem;
-  color: #b904a3;
-  border: 1px solid #b904a3;
+  color: #64a19d;
+  border: 1px solid #64a19d;
 }
 #mainNav .navbar-toggler:focus {
   outline: none;
